# Brave_web3_protocol

./: .gitignore  README.md  a.txt  brave_source_code_change.cc  builTool.py
BraveDocuments/: README.md
aboutTs/: TS.md  brave_web3_domains_page.html
brave_browser_change/: brave_change_by_sequenced_task.cc  brave_proxying_url_loader_factory.cc
brave_code_test/: .gitignore  CMakeLists.txt  brave_web3_libsodium.cc  brave_web3_libsodium.h  brave_web3_rpc.cc  brave_web3_rpc.h  brave_web3_service.cc  brave_web3_service.h  brave_web3_task.cc  brave_web3_task.h  main.cpp
docus/: ReadMe.md  brave_string.grd  new_brave_string.grd
patch/1.87.3/src/brave/browser/net/: brave_web3_libsodium.cc
style/: README.md
style/src/brave/android/features/tab_ui/java/strings/: android_chrome_tab_ui_strings.grd
style/src/brave/android/features/tab_ui/java/strings/translations/: android_chrome_tab_ui_strings_af.xtb  android_chrome_tab_ui_strings_am.xtb  android_chrome_tab_ui_strings_ar.xtb  android_chrome_tab_ui_strings_az.xtb  android_chrome_tab_ui_strings_be.xtb  android_chrome_tab_ui_strings_bs.xtb  android_chrome_tab_ui_strings_cy.xtb  android_chrome_tab_ui_strings_da.xtb  android_chrome_tab_ui_strings_en-GB.xtb  android_chrome_tab_ui_strings_eu.xtb  android_chrome_tab_ui_strings_fa.xtb  (+26 more)
ultimate/: brave_proxying_url_loader_factory.cc  brave_web3_rpc.cc  brave_web3_rpc.h  brave_web3_service.cc  brave_web3_service.h  brave_web3_task.cc  brave_web3_task.h
ultimate11-11/: BUILD.gn  brave_web3_rpc.cc  brave_web3_rpc.h  brave_web3_service.cc  brave_web3_service.h  brave_web3_task.cc  sources.gni
ultimate11-11/ominibox_edit_model/: omnibox_edit_model.cc
utils/: calculateTranslation.py  change_browser_name.py  changed_string.txt  stringReplace.py  stringTest.py  test.xml
utils/banding/: band.txt
utils/img_source/: get_all_icon.py  get_img.py  img.txt  png_to_ico.py  scale_img.py  update_icon.py
utils/img_source/img_path/: beta.txt  common.txt  commonWithBack.txt  delete.txt  dev.txt  night.txt  other.txt  withbrave.txt
utils/img_source/vector_icon/: read_icons.py
v1.87.3/: brave_web3_task.cc  brave_web3_task.h
v1.87.3/src-brave/browser/extensions-api-settings_private/: brave_prefs_util.cc
(+44 files in other folders)
